tests/invalid/missing_function_return_type.out
tests/invalid/missing_procedure_return_type.ri:3:12: error: expected return type declaration
    3 | proc ret() -> { }
      |            ^~
rivet: error: could not compile module `missing_procedure_return_type`, aborting due to previous error